[tool.poetry]
name = "advanced-triangle-counting"
version = "0.1.0"
description = "A library for  advanced triangle counting for graphs in python, built on top of NetworkX"
authors = ["georg <georg.squared@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
networkx = {extras = ["default"], version = "^2.6.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
