[tool.poetry]
name = "advanced-triangle-counting"
version = "0.1.0"
description = "A library for  advanced triangle counting for graphs in python, built on top of NetworkX"
authors = [
    "Avraam Bardas <bardasavram@gmail.com>",
    "Dimitris Dimoudis <dimoudis.jim@gmail.com>",
    "Nikos Gkiouzelis <nickgiouzel@gmail.com>",
    "Sofia Kostoglou <kosofia9@gmail.com>",
    "Bill Papapostolou <vpapapos@csd.auth.gr>",
    "George Georgiou <georg.squared@gmail.com>",
    "Georgios Kinigopoulos <kynigopo@csd.auth.gr>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
networkx = {extras = ["default"], version = "^2.6.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
